Fixing facebook like-button dialog visibility while maintaining fix for the width

--- a/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/default/css/style.css
+++ b/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/default/css/style.css
@@ -3489,7 +3489,8 @@ a.historyComparePrevious span {
   box-sizing: content-box;
 }
 #content .social-buttons {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: visible;
 }
 #content .social-buttons ul {
   list-style-type: none;
