--- a/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/default/less/theme/pagemodel.less
+++ b/hexagonit/themeskel/templates/less_theme/+namespace_package+/+package+/theme_resources/default/less/theme/pagemodel.less
@@ -232,7 +232,8 @@
     }
 
     .social-buttons {
-        overflow: hidden;
+        overflow-x: hidden;
+        overflow-y: visible;
 
         ul {
             list-style-type: none;
